--- a/src/components/experience_card/experience_card.module.scss
+++ b/src/components/experience_card/experience_card.module.scss
@@ -14,4 +14,10 @@
         font-size: 0.8rem;
         font-weight: bold;
     }
+
+    &_list{
+        li{
+            padding: 0 0 0.5rem 0;
+        }
+    }
 }
