--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   font-family: portfolio_regular;
   src: url(../public/fonts/SpaceGrotesk-Regular.ttf);
 }
+
 @font-face {
   font-family: portfolio_bold;
   src: url(../public/fonts/SpaceGrotesk-Bold.ttf);
@@ -12,14 +13,19 @@
 $primaryColor: #915eff;
 $secondaryColor: #58379e;
 
-*{
+* {
   font-family: portfolio_regular, portfolio_bold, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: portfolio_bold;
 }
 
@@ -57,6 +63,7 @@ h1,h2,h3,h4,h5,h6{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -64,55 +71,64 @@ h1,h2,h3,h4,h5,h6{
 
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #ffffff;
-    transition: background-color 5000s ease-in-out 0s;
-    box-shadow: inset 0 0 45px 45px $tertiaryColor;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #ffffff;
+  transition: background-color 5000s ease-in-out 0s;
+  box-shadow: inset 0 0 45px 45px $tertiaryColor;
 }
 
-.main_color{
+.main_color {
   color: $primaryColor;
 }
 
-.MuiTimelineContent-root{
-  &:nth-child(2n){
+.MuiTimelineContent-root {
+  &:nth-child(2n) {
     justify-content: right;
   }
 }
 
-.tags{
+.tags {
   margin: 10px 10px 10px 0;
   padding: 8px 16px;
   outline: none;
   display: inline-block;
   border-radius: 5px;
-  
-  &__repo{
-      background-color: white;
-      color: $primaryColor;
+
+  &__repo {
+    background-color: white;
+    color: $primaryColor;
   }
 
-  &__site{
-      background-color: $primaryColor;
-      color: white;
-  }   
+  &__site {
+    background-color: $primaryColor;
+    color: white;
+  }
 }
 
-.icon_link{
+.icon_link {
   &:hover {
     color: $primaryColor;
   }
 }
 
-.action-slider{
+.action-slider {
   animation: bounce 2s ease infinite;
 }
 
 @keyframes bounce {
   50% {
     transform: translateY(1.8rem);
+  }
+}
+
+/* overrides */
+
+@include screen_sm {
+  .MuiTimelineItem-missingOppositeContent::before {
+    flex: 0 !important;
+    padding: 0 !important;
   }
 }
