--- a/src/components/cards/cards.module.scss
+++ b/src/components/cards/cards.module.scss
@@ -11,6 +11,10 @@
     font-weight: bold;
     margin: 1rem 0;
 
+    @include screen_sm{
+        flex-basis: 100%;
+    }
+
     h4{
         font-weight: bolder;
         font-size: 1.5rem;
