--- a/src/utils/variables.module.scss
+++ b/src/utils/variables.module.scss
@@ -1,6 +1,7 @@
 $primaryColor: #915eff;
 $secondaryColor: #2f2465;
 $tertiaryColor: #1d1836;
+$error: #e74866;
 
 @mixin screen_sm {
     @media (max-width: 640px) {
