--- a/src/App.scss
+++ b/src/App.scss
@@ -140,4 +140,9 @@ input:-webkit-autofill:active {
     flex: 0 !important;
     padding: 0 !important;
   }
+
+  .MuiTimeline-root{
+    padding: 0 !important;
+  }
 }
+
