--- a/src/components/experience/experience.module.scss
+++ b/src/components/experience/experience.module.scss
@@ -4,7 +4,7 @@
     position: relative;
     font-family: "portfolio_bold";
     color: white;
-    text-align: center;
+    // text-align: center;
 
     h6{
         color: white;
@@ -12,6 +12,10 @@
 
     h2{
         font-size: 4rem;
+
+        @include screen_sm{
+            font-size: 3rem;
+        }
     }
 
     .paper {
